Added comment in put route
