# routes/contactsRoute.js
@@ -18,7 +18,22 @@ contactsRouter.get('/:id', getSingleContact);
 contactsRouter.post('/', createContact);
 
 //PUT route to update a contact
-contactsRouter.put('/:id', updateContact);
+contactsRouter.put('/:id',
+    /* To ensure that the PUT route in api-docs has a body space for updates
+        #swagger.parameters['body'] = {
+            in: 'body',
+            description: 'Updated contact information',
+            required: true,
+            schema: {
+                firstName: 'Jessica',
+                lastName: 'Kitchen',
+                email: 'jessica@test.com',
+                favoriteColor: 'Purple',
+                birthday: '1995-01-01'
+            }
+        }
+    */
+    updateContact);
 
 //DELETE route to delete a contact
 contactsRouter.delete('/:id', deleteContact);
